# erised

./: .gitignore  Cargo.toml  build.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: extra_gen.rs  main.rs  module_finder.rs  static_items_gen.rs  to_tokens_gen.rs  visitor.rs
crates/erised/: Cargo.toml
crates/erised/src/: build.rs  ext.rs  lib.rs  reflection.rs
crates/lib/: Cargo.toml
crates/lib/src/: access.rs  build.rs  builder.rs  codegen_input.rs  destruct.rs  heap_types.rs  imp.rs  lib.rs  new_visitor.rs  old_visitor.rs  static_gen.rs  types.rs  utils.rs  visitor.rs
crates/lib/src/builder/: crates.rs  generics.rs  items.rs  paths.rs  types.rs
crates/lib/src/builder/items/: constants.rs  deprecation.rs  enums.rs  functions.rs  impls.rs  imports.rs  modules.rs  opaque_types.rs  proc_macros.rs  spans.rs  statics.rs  structs.rs  traits.rs  typedefs.rs  visibility.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  type_info.rs
crates/macros/src/type_info/: field.rs  matcher.rs  variant.rs
crates/macros_tests/: Cargo.toml
crates/macros_tests/src/: lib.rs
crates/macros_tests/src/snapshots/: erised_macros_tests__tests__option_info.snap  erised_macros_tests__tests__struct_enum_destruct_field.snap  erised_macros_tests__tests__struct_enum_info.snap  erised_macros_tests__tests__struct_info.snap  erised_macros_tests__tests__tuple_enum_info.snap  erised_macros_tests__tests__tuple_struct_info.snap  erised_macros_tests__tests__unit_enum_info.snap  erised_macros_tests__tests__unit_struct_info.snap
examples/: visitor.rs
src/: lib.rs  main.rs  reflected.rs  reflection.rs
tests/: crate.rs
tests/snapshots/: crate__erised.snap  crate__todo.snap  crate__todo.snap.new
