[package]
name = "erised"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
proc-macro2 = "1.0.51"
quote = "1.0.23"
rustdoc-types = "0.20.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
