[package]
name = "erised"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
erised-macros = { path = "../macros" }

# Crates.io
proc-macro2 = "1.0.51"
quote = "1.0.23"
#rustdoc-json = "0.8.4"
rustdoc-json = { git = "https://github.com/frondeus/cargo-public-api.git", branch="frondeus/hidden-items" }
rustdoc-types = "0.20.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["unbounded_depth"] }
thiserror = "1.0.40"
Inflector = "0.11.4"
serde_stacker = "0.1.8"
